--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,7 +6,7 @@ workflows:
       ios_signing:
         distribution_type: ad_hoc
         bundle_identifier: com.codemagicFirebaseAppDistribution.io
-      flutter: stable
+      flutter: stable # specify version
       xcode: latest
       cocoapods: default
       groups:
@@ -75,4 +75,4 @@ workflows:
             key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER       # Alphanumeric value that identifies the API key, can also reference environment variable such as $APP_STORE_CONNECT_KEY_IDENTIFIER
             issuer_id: $APP_STORE_CONNECT_ISSUER_ID         # Alphanumeric value that identifies who created the API key, can also reference environment variable such a
             submit_to_testflight: true
-            submit_to_app_store: false      
+            submit_to_app_store: true      
