--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -22,6 +22,9 @@ workflows:
       - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
         script: |
           keychain initialize
+      - name: Set up code signing settings on Xcode project
+        script: |
+          xcode-project use-profiles --warn-only
       - name: set up provisioning profiles
         script: |
           PROFILES_HOME="$HOME/Library/MobileDevice/Provisioning Profiles"
@@ -40,8 +43,6 @@ workflows:
           cd $FCI_BUILD_DIR
           # agvtool new-version -all $(($BUILD_NUMBER +1))
           agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1))
-        script: |
-          xcode-project use-profiles
       - name: Get Flutter packages
         script: |
           cd . && flutter packages pub get
@@ -60,6 +61,8 @@ workflows:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
       - flutter_drive.log
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
       firebase:
         firebase_service_account: $FIREBASE_SERVICE_ACCOUNT
@@ -78,4 +81,4 @@ workflows:
             key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER       # Alphanumeric value that identifies the API key, can also reference environment variable such as $APP_STORE_CONNECT_KEY_IDENTIFIER
             issuer_id: $APP_STORE_CONNECT_ISSUER_ID         # Alphanumeric value that identifies who created the API key, can also reference environment variable such a
             submit_to_testflight: true
-            submit_to_app_store: true      
+            submit_to_app_store: false      
